--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-LNDHost=https://localhost:8080/
-TapdHost=https://localhost:8089/
+LNDHost=localhost:8080
+TapdHost=localhost:8089
 LNDMacaroon=020b...
 TapdMacaroon=020c...
 JWTSecret=secret_xyz
