Full send flow using tapd fork

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ TapdHost=localhost:8089
 LNDMacaroon=020b...
 TapdMacaroon=020c...
 JWTSecret=secret_xyz
+
+TaprootSigsDir=/Users/MyMac/.polar/networks/1/volumes/tapd/dave-tap/
