--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,8 @@ TapdMacaroon=020c...
 JWTSecret=secret_xyz
 
 TaprootSigsDir=/Users/MyMac/.polar/networks/1/volumes/tapd/dave-tap/
+
+DemoMode=false # set to true if you want to auto-fund invoices of DemoAmount
+DemoAmount=10 # if a request is made to receive this amount, we ask DemoFunder to pay it immediately
+DemoTapdHost=localhost:8290
+DemoTapdMacaroon=020c...
